2004-11-17  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-file-util.c: RSVG's convenience API should now be able to transparently handle remote files via gnome-vfs, if available.
	* rsvg.c: Some Win32/Unix path portability changes
	
2004-11-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-defs.c: Interfile vfs linking now implemented. Utility api automatically gives contextual information.
	
2004-11-17  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-shapes.c: Refactored the image downloading code into a generic xlink:href downloading code.
	Caleb can now use this for linking.
	
2004-11-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-defs.c: Interfile linking now implemented. Can't yet use gnome-vfs

2004-11-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* everywhere: split RsvgHandle into two parts.
	* rsvg.c: made the image be rendered when get_pixbuf is actually called. 
	* rsvg-text.c: Large number of text improvements: formatting, alignment, whitespace handling and styling. 
	* everywhere: Number if inheritance fixes
	* rsvg-pservers.c: made current-color determined by context
	* rsvg-private.h, rsvg.c: handle percentage widths more accurately (based on viewbox)

2004-10-20  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-defs.c: fixed memleak opened yesterday
	
2004-10-19  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-defs.c: stopped passing the hash table a destroy function
	
2004-10-15  Dom Lachowicz <cinamod@hotmail.com>

	* Makefile.am: bug 155530, ckelso@heliosphere.org (Chris Kelso)
	
2004-10-14  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Push gnome_vfs_init() up to rsvg_init()
	* rsvg-shapes.c: ditto, bug #155433
	
2004-09-29  Dom Lachowicz <cinamod@hotmail.com>	

	* moz-plugin/moz-plugin.c: Fix bug #154083
	
2004-09-26  Dom Lachowicz <cinamod@hotmail.com>

	* gdk-pixbuf-loader/io-svg.c: Sanity checks
	
2004-09-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c Part of bug 153671
	* *.c: Prepare for some gettext lovin'
	